--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
-<div class="row justify-space-between-md">
+<div class="row center-md">
   <div class="login-card">
-    <h2 class="page-title">Login</h2>
+    {{!-- <h2 class="page-title">Login</h2> --}}
     <form class="form login-form">
       <div class="form-group">
         <label for="user-login">Username:</label>
@@ -16,7 +16,7 @@
     </form>
   </div>
   <div class="login-card">
-    <h2 class="page-title">Signup</h2>
+    {{!-- <h2 class="page-title">Signup</h2> --}}
     <form class="form signup-form">
       <div class="form-group">
         <label for="username-signup">Username:</label>
