--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,38 +1,39 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spicy Bites</title>
-    <link rel="stylesheet" type="text/css" href="/css/jass.css">
-    <link rel="stylesheet" href="/css/style.css">
-</head>
- <body>
-  <header>
-    <h1>Welcome to Spicy Bites!</h1>
-  </header>
-  <nav>
-    <a href="/">Home</a>
-    <!-- If the user is logged in, show a logout button -->
+    <link rel="stylesheet" type="text/css" href="/css/jass.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Welcome to Spicy Bites!</h1>
+    </header>
+    <nav>
+      <a href="/">Home</a>
+      <!-- If the user is logged in, show a logout button -->
+      {{#if loggedIn}}
+        <button id="logout" class="btn-no-style">Logout</button>
+      {{else}}
+        <!-- Otherwise, show a link to login -->
+        <a href="/login">Login</a>
+      {{/if}}
+    </nav>
+
+    <main>
+      <aside>
+        <h2>Devour the recipes!!</h2>
+      </aside>
+      <div class="gallery">
+        {{{body}}}
+      </div>
+    </main>
+
+    <!-- If the user is logged in, load the JS script for when they logout -->
     {{#if loggedIn}}
-    <button id="logout" class="btn-no-style">Logout</button>
-    {{else}}
-    <!-- Otherwise, show a link to login -->
-    <a href="/login">Login</a>
+      <script src="/js/logout.js"></script>
     {{/if}}
-  </nav>
-  <main>
-    <aside>
-      <h2>Devour the recipes!!</h2>
-    </aside>
-    <div class="gallery">
-      {{{body}}}
-    </div>
-  </main>
-  <!-- If the user is logged in, load the JS script for when they logout -->
-  {{#if loggedIn}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
-</body>
+  </body>
 </html>
