--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,7 +3,7 @@
     <li>
       <article class='post'>
         <div class='title'>
-          <a href='/post/{{post.id}}'>{{recipe_name}}</a>
+          <a href='/post/{{id}}'>{{recipe_name}}</a>
         </div>
 
         <div class='meta'>
