updated datatype for recipe body

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,6 +6,10 @@
           <a href='/post/{{id}}'>{{recipe_name}}</a>
         </div>
 
+        <div>
+          <img src='/image/{{filename}}'/>
+        </div>
+
         <div class='meta'>
           by
           {{user.username}}
