--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -5,7 +5,7 @@
   </div>
 
   <div class='meta'>
-    {{post.recipe_name}}
+    {{!-- {{post.recipe_name}} --}}
     {{post.recipe_body}}
   </div>
 
