added images to homepage

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -4,8 +4,11 @@
     <a href='/post/{{post.id}}'>{{post.recipe_name}}</a>
   </div>
 
+  <div>
+    <img src='images/{{post.filename}}' />
+  </div>
+
   <div class='meta'>
-    {{!-- {{post.recipe_name}} --}}
     {{post.recipe_body}}
   </div>
 
