--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,10 @@
 :root {
-  --primary: #3d5852;
-  --secondary: #86938f;
-  --tertiary: #5e877f;
-  --quatrinary: #6c6b67;
-  --light: #e3e4e3;
-  --dark: #182c23;
-  --error: rgb(228, 46, 1);
+  --primary: #BD1922;
+  --secondary: #19BEB5;
+  --tertiary: #E89005;
+  --quatrinary: #1921BE;
+  --light: #bfd7ea; 
+  --dark: #0b3954; 
   --border-radius: 0.3rem;
 }
 
@@ -19,6 +18,6 @@
   border-radius: var(--border-radius);
   border-style: double;
   border-width: thick;
-  background-color: red;
+  background-color: var(--primary);
   color: var(--light);
 }
