--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,7 +7,7 @@
         </div>
 
         <div>
-          <img src='/image/{{filename}}'/>
+          <img src='images/{{filename}}'/>
         </div>
 
         <div class='meta'>
@@ -17,14 +17,14 @@
           {{format_date created_at}}
         </div>
 
-        <div class='meta'>
+        {{!-- <div class='meta'>
           {{recipe_body}}
-        </div>
+        </div> --}}
 
-        {{!-- <div class="meta">
-        Cetegory:
-        {{category}}
-      </div> --}}
+        <div class="meta">
+        Category:
+        {{category.category_name}}
+      </div>
 
       </article>
     </li>
