add comments to post

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,10 @@
       <a href='/'>Home</a>
       <!-- If the user is logged in, show a logout button -->
       {{#if loggedIn}}
+        <a href='/dashboard'>Your Posts</a>
+
         <button id='logout' class='btn-no-style'>Logout</button>
+
       {{else}}
         <!-- Otherwise, show a link to login -->
         <a href='/login'>Login</a>
