--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -16,3 +16,19 @@
     {{post.created_at}}
   </div>
 </article>
+
+{{#if loggedIn}}
+  <form class='comment-form'>
+    <div>
+      <textarea name='comment-body'></textarea>
+    </div>
+
+    <div>
+      <button type='submit'>add comment</button>
+    </div>
+  </form>
+{{/if}}
+
+{{#if loggedIn}}
+  <script src='/javascript/comment.js'></script>
+{{/if}}
