--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,10 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>Spicy Bites</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
     <link rel='stylesheet' type='text/css' href='/css/jass.css' />
     <link rel='stylesheet' href='/css/style.css' />
   </head>
@@ -13,10 +17,11 @@
     </header>
 
     <nav>
-      <a href='/'>Home</a>
       <!-- If the user is logged in, show a logout button -->
-      {{#if loggedIn}}
-        <button id='logout' class='btn-no-style'>Logout</button>
+      {{#if loggedIn}}      
+        <a href='/homepage'>Home</a>
+        <a href='/login'>Logout</a>
+        {{!-- <button id='logout' class='btn-no-style'>Logout</button> --}}
       {{else}}
         <!-- Otherwise, show a link to login -->
         <a href='/login'>Login</a>
