--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,36 +1,38 @@
-<div class="row center-md">
-  <div class="login-card">
-    {{!-- <h2 class="page-title">Login</h2> --}}
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="user-login">Username:</label>
-        <input class="form-input" type="text" id="user-login" />
-      </div>
-      <div class="form-group">
-        <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">Login</button>
-      </div>
-    </form>
-  </div>
-  <div class="signup-card">
-    {{!-- <h2 class="page-title">Signup</h2> --}}
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
-      </div>
-         <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">Signup</button>
-      </div>
-    </form>
+<div class='container'>
+  <div class='row align-items-center'>
+    <div class='login-card col'>
+      {{! <h2 class="page-title">Login</h2> }}
+      <form class='form login-form'>
+        <div class='form-group'>
+          <label for='user-login'>Username:</label>
+          <input class='form-input' type='text' id='user-login' />
+        </div>
+        <div class='form-group'>
+          <label for='password-login'>Password:</label>
+          <input class='form-input' type='password' id='password-login' />
+        </div>
+        <div class='form-group'>
+          <button class='btn btn-primary' type='submit'>Login</button>
+        </div>
+      </form>
+    </div>
+    <div class='signup-card col'>
+      {{! <h2 class="page-title">Signup</h2> }}
+      <form class='form signup-form'>
+        <div class='form-group'>
+          <label for='username-signup'>Username:</label>
+          <input class='form-input' type='text' id='username-signup' />
+        </div>
+        <div class='form-group'>
+          <label for='password-signup'>Password:</label>
+          <input class='form-input' type='password' id='password-signup' />
+        </div>
+        <div class='form-group'>
+          <button class='btn btn-primary' type='submit'>Signup</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
 
-<script src="/js/login.js"></script>
+<script src='/js/login.js'></script>
