--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,3 +35,32 @@
   background-color: var(--primary);
   color: var(--light);
 }
+
+header h1 {
+  font-size: 75px;
+  color: var(--primary);
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
+}
+
+/* nav {
+  font-size: 25px;
+  margin: 0 auto;
+  border: 3px solid var(--dark);
+  border-radius: var(--border-radius);
+  border-style: double;
+  border-width: thick;
+  background-color: var(--primary);
+  color: var(--light);
+} */
+
+aside h2 {
+  font-size: 45px;
+  color: var(--quatrinary);
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
+}
+
+img {
+
+}
