--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,14 +17,10 @@
     </header>
 
     <nav>
-      <!-- If the user is logged in, show a logout button -->
+      <!-- If the user is logged in, show a logout and home button -->
       {{#if loggedIn}}      
         <a href='/homepage'>Home</a>
         <a href='/login'>Logout</a>
-        {{!-- <button id='logout' class='btn-no-style'>Logout</button> --}}
-      {{!-- {{else}}
-        <!-- Otherwise, show a link to login -->
-        <a href='/login'>Login</a> --}}
       {{/if}}
     </nav>
 
