--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
-<div class='container'>
-  <div class='row align-items-center'>
-    <div class='login-card col'>
+<div class='container-fluid'>
+  <div class='row justify-content-evenly'>
+    <div class='login-card col-4'>
       {{! <h2 class="page-title">Login</h2> }}
       <form class='form login-form'>
         <div class='form-group'>
@@ -12,11 +12,12 @@
           <input class='form-input' type='password' id='password-login' />
         </div>
         <div class='form-group'>
-          <button class='btn btn-primary' type='submit'>Login</button>
+          <button class='btn' type='submit'>Login</button>
         </div>
       </form>
     </div>
-    <div class='signup-card col'>
+
+    <div class='signup-card col-4'>
       {{! <h2 class="page-title">Signup</h2> }}
       <form class='form signup-form'>
         <div class='form-group'>
@@ -28,7 +29,7 @@
           <input class='form-input' type='password' id='password-signup' />
         </div>
         <div class='form-group'>
-          <button class='btn btn-primary' type='submit'>Signup</button>
+          <button class='btn' type='submit'>Signup</button>
         </div>
       </form>
     </div>
