add comment box // comments not working

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -22,4 +22,21 @@
     on
     {{post.created_at}}
   </div>
+
+  {{#if loggedIn}}
+    <form class='comment-form'>
+      <div>
+        <textarea name='comment-body'></textarea>
+      </div>
+
+      <div>
+        <button type='submit'>add comment</button>
+      </div>
+    </form>
+  {{/if}}
+
 </article>
+
+{{#if loggedIn}}
+  <script src='/javascript/comment.js'></script>
+{{/if}}
