--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,11 @@
   --border-radius: 15px;
 }
 
+body {
+  background-image: url("../images/main.jpg");
+  background-size: cover;
+}
+
 .login-card {
   display: flex;
   justify-content: center;
@@ -41,19 +46,8 @@ header h1 {
   color: var(--primary);
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: bold;
-  margin-bottom: 5%;
+  margin-bottom: 20px;
 }
-
-/* nav {
-  font-size: 25px;
-  margin: 0 auto;
-  border: 3px solid var(--dark);
-  border-radius: var(--border-radius);
-  border-style: double;
-  border-width: thick;
-  background-color: var(--primary);
-  color: var(--light);
-} */
 
 aside h2 {
   font-size: 45px;
@@ -68,7 +62,6 @@ aside h2 {
   flex-direction: column;
   align-content: center;
   justify-content: center;
-  /* align-items: baseline; */
 }
 
 .form-group button{
@@ -77,6 +70,35 @@ aside h2 {
   border-radius: 10px;
 }
 
-img {
+nav {
+  display: flex;
+  justify-content: space-around;
+  padding: 5px;
+  background-color: var(--primary);
+  margin-bottom: 15px;
+}
 
+nav a {
+  color: var(--light);
+  font-size: 15px;
+}
+
+img {
+  height: 300px;
+  width: 300px;
+}
+
+.post-list li{
+  list-style-type: none;
+}
+
+.post {
+  font-size: 20px;
+  color: black;
+}
+
+.postTitle a {
+  font-size: 25px;
+  font-weight: bold;
+  color: var(--primary);
 }
