--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -17,10 +17,10 @@
           {{format_date created_at}}
         </div>
 
-        <div class='postCategory'>
+        {{!-- <div class='postCategory'>
           Category:
           {{category.category_name}}
-        </div>
+        </div> --}}
 
       </article>
     </li>
