--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,15 +20,19 @@
     {{#if loggedIn}}
       <nav>
         <a href='/homepage'>Home</a>
+        {{!-- <a href='/'>View Recipes by Category</a>
+        <a href='/'>Create a post</a>         --}}
         <a href='/login'>Logout</a>
       </nav>
     {{/if}}
 
     <main>
       <aside>
+        {{#unless loggedIn}}
         <h2 class='text-center'>Be Ready To Devour These Recipes...</h2>
+        {{/unless}}
       </aside>
-      <div class='gallery'>
+      <div>
         {{{body}}}
       </div>
     </main>
