--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,7 @@
     {{#if loggedIn}}
       <nav>
         <a href='/homepage'>Home</a>
+        <a href='/dashboard'>dashboard</a>
         <a href='/login'>Logout</a>
       </nav>
     {{/if}}
