added single-post route back in

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,7 @@
         <a href='/homepage'>Home</a>
         {{! <a href='/'>View Recipes by Category</a>
         <a href='/'>Create a post</a>         }}
+        <a href='/dashboard'>Dashboard</a>
         <a href='/login'>Logout</a>
       </nav>
     {{/if}}
