--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -36,5 +36,5 @@
 </article>
 
 {{#if loggedIn}}
-  <script src='/javascript/comment.js'></script>
+  <script src='/js/comment.js'></script>
 {{/if}}
