--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,8 +5,8 @@
 
   <form class='new-post-form'>
     <div>
-      <label for='recipe-title'>Your Recipe Title</label>
-      <input type='text' id='recipe-title' name='recipe-title' />
+      <label for='recipe-name'>Your Recipe Title</label>
+      <input type='text' id='recipe-name' name='recipe-name' />
     </div>
 
     <div>
