--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,12 +2,12 @@
   {{#each posts}}
     <li>
       <article class='card post'>
-        <div class='card-title postTitle'>
+        <div class='postTitle'>
           <a href='/post/{{id}}'>{{recipe_name}}</a>
         </div>
 
         <div>
-          <img src='images/{{filename}}' class='card-img'/>
+          <img src='images/{{filename}}' class='card-img' />
         </div>
 
         <div class='card-text postCreator'>
