--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,8 +12,9 @@
     <link rel='stylesheet' href='/css/style.css' />
   </head>
   <body>
+
     <header>
-      <h1 class='text-center'>Welcome to Spicy Bites!</h1>
+      <h1 class='text-center page-title'>Spicy Bites!</h1>
     </header>
 
     <!-- If the user is logged in, show a logout and home button -->
@@ -30,7 +31,7 @@
     <main>
       <aside>
         {{#unless loggedIn}}
-          <h2 class='text-center'>Be Ready To Devour These Recipes...</h2>
+          <h2 class='text-center page-subtitle'>be ready to devour these recipes</h2>
         {{/unless}}
       </aside>
       <div>
