--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,34 +1,49 @@
-<div>Welcome, {{username}}!</div>
+<article class='dashboardPage'>
 
-<section>
-  <h2>Create New Post</h2>
+  <div class='postTitle'>Welcome, {{username}}!</div>
 
-  <form class='new-post-form'>
-    <div>
-      <label for='recipe-name'>Your Recipe Title</label>
-      <input type='text' id='recipe-name' name='recipe-name' />
-    </div>
-
-    <div>
-      <textarea placeholder='Recipe instructions' id='recipe-body'></textarea>
-    </div>
-
-    <button type='submit' class='btn'>Create</button>
-  </form>
-</section>
-
-{{#if posts.length}}
   <section>
-    <h2>Your Posts</h2>
-    <ol>
-      {{#each posts as |post|}}
-        <li>
-          {{!-- {{> post-info post}} --}}
-          <a href='/dashboard/edit/{{post.id}}' class='edit-link'>Edit post</a>
-        </li>
-      {{/each}}
-    </ol>
+    <h2>Create New Post</h2>
+
+    <form class='new-post-form'>
+      <div>
+        <label for='recipe-name'>Your recipe title:</label>
+        <input
+          type='text'
+          id='recipe-name'
+          name='recipe-name'
+          class='recipe-form'
+        />
+      </div>
+
+      <div>
+        <label for='recipe-name'>instructions:</label>
+        <textarea
+          class='textarea-body'
+          placeholder='Recipe instructions'
+          id='recipe-body'
+        ></textarea>
+      </div>
+
+      <button type='submit' class='btn'>Create</button>
+    </form>
+
   </section>
-{{/if}}
+
+  {{#if posts.length}}
+    <section>
+      <h2>Your Posts</h2>
+      <ol>
+        {{#each posts as |post|}}
+          <li>
+            {{!-- {{> post-info post}} --}}
+            <a href='/dashboard/edit/{{post.id}}' class='edit-link'>Edit post</a>
+          </li>
+        {{/each}}
+      </ol>
+    </section>
+  {{/if}}
+
+</article>
 
 <script src='/js/add-post.js'></script>
