--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -22,11 +22,11 @@
   {{#if loggedIn}}
     <form class='comment-form'>
       <div>
-        <textarea class='comment-body' name='comment-body'></textarea>
+        <textarea class='textarea-body' name='comment-body'></textarea>
       </div>
 
       <div>
-        <button class='commentBtn' type='submit'>Add Comment</button>
+        <button class='btn' type='submit'>Add Comment</button>
       </div>
     </form>
   {{/if}}
