--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -26,7 +26,7 @@
       </div>
 
       <div>
-        <button class='btn' type='submit'>Add Comment</button>
+        <button class='comment-btn' type='submit'>Add Comment</button>
       </div>
     </form>
   {{/if}}
