--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -6,21 +6,21 @@
   <form class='edit-post-form'>
     <div>
       <input
-        name='recipe-name'
+        name='edit-recipe-name'
         type='text'
         class='recipe-form'
+        id='edit-recipe-name'
         value='{{post.recipe_name}}'
       />
       <input
-        name='recipe-body'
+        name='edit-recipe-body'
         type='text'
         class='textarea-body'
+        id='edit-recipe-body'
         value='{{post.recipe_body}}'
       />
     </div>
-    <div>
-      <a href='/post/{{id}}'>{{post.comments.length}}</a>
-    </div>
+
     <button class='btn' type='submit'>Save Post</button>
     <button type='button' class='delete-post-btn'>Delete Post</button>
   </form>
