--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -61,6 +61,8 @@
               </div>
 
               <a href='/dashboard/edit/{{id}}' class='edit-link'>Edit post</a>
+              <button type='button' class='delete-post-btn btn'>Delete Post</button>
+            
               {{!-- <div class='postCategory'>
             Category:
           {{category.category_name}} --}}
@@ -74,3 +76,4 @@
 </article>
 
 <script src='/js/add-post.js'></script>
+<script src='/js/delete-post.js'></script>
