--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -22,7 +22,7 @@
     </div>
 
     <button class='btn' type='submit'>Save Post</button>
-    <button type='button' class='delete-post-btn'>Delete Post</button>
+    <button type='button' class='delete-post-btn btn'>Delete Post</button>
   </form>
 </article>
 
