--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -4,6 +4,7 @@
     Edit Post
   </h2>
   <form class='edit-post-form'>
+    <input type='hidden' name='post-id' value='{{post.id}}' />
     <div>
       <input
         name='edit-recipe-name'
