--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -61,6 +61,8 @@
               </div>
 
               <a href='/dashboard/edit/{{id}}' class='edit-link'>Edit post</a>
+              <a href='/dashboard/delete/{{id}}' class='delete-link'>Delete post</a>
+
               {{!-- <div class='postCategory'>
             Category:
           {{category.category_name}} --}}
