added final style touches

--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -5,7 +5,7 @@
         {{comment_text}}
       </div>
       <div class='meta'>
-        {{user.username}}
+        - {{user.username}}
         on
         {{format_date created_at}}
       </div>
