--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,5 +1,5 @@
-<article>
-  <a href='/dashboard'> &larr; Back to dashboard</a>
+<a href='/dashboard' class='bcktodash'> &larr; Back to dashboard</a>
+<article class='dashboardPage'>  
   <h2>
     Edit Post
   </h2>
