--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -61,7 +61,7 @@
               </div>
 
               <a href='/dashboard/edit/{{id}}' class='edit-link'>Edit post</a>
-              <a href='/dashboard/delete/{{id}}' class='delete-link'>Delete post</a>
+              {{!-- <a href='/dashboard/delete/{{id}}' class='delete-link'>Delete post</a> --}}
 
               {{!-- <div class='postCategory'>
             Category:
