--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -11,8 +11,8 @@
   <div class='singlePostCreator'>
     Posted by
     {{post.user.username}}
-    on
-    {{post.created_at}}
+    on 
+    {{format_date post.created_at}}
   </div>
 
   <div class='postBody'>
