--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -22,8 +22,7 @@
         type='text'
         class='textarea-body'
         id='edit-recipe-body'
-        value='{{post.recipe_body}}'
-      /></textarea>
+      />{{post.recipe_body}}</textarea>
     </div>
 
     <button class='btn' type='submit'>Save Post</button>
